--- a/index.html
+++ b/index.html
@@ -4,28 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
+    <title>Random quote</title>
 </head>
 
 <body>
-<!-- start container -->
-    <div id="container">
-        <h2>Get Your Daily Quote</h2>
-        <!--start quoteContainer-->
-        <div id="quoteContainer">
-            <p id="quoteContent"></p>
-            <p id="quoteAuthor"></p>
+    <div class="content">
+        <div class="card">
+            <h2>Random quote</h2>
+
+
+            <div class="button button-3" id="btngen">
+                <div id="circle"></div>
+                <a href="#">Let's Go2!</a>
+              </div>
+
         </div>
-        <!--end quoteContainer-->
-        <!--start buttonContainer-->
-        <div id="buttonContainer">
-            <a href="#" id="quoteButton">Quote Me</a>
-        </div>
-        <!--end buttonContainer-->
+        <div id="quote"></div>
+
     </div>
-    <!--end container-->
-    <script src="app.js"></script>
+
 </body>
+<script src="app.js"></script>
 
 </html>
