--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
             <div class="button button-3" id="btngen">
                 <div id="circle"></div>
-                <a href="#">Let's Go2!</a>
+                <a href="#">Generate!</a>
               </div>
 
         </div>
